better alignment of theme button; button right size so not enormous outline

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-<div class="flex">
+<div class="flex items-center">
     <h1 class="mr-6 text-4xl prose dark:prose-light">
         <a class="text-4xl leading-relaxed no-underline border-b-8 border-yellow-200 hover:border-transparent h-card" rel="me" href="/"
             {% if page.url == "/" %}
@@ -7,7 +7,7 @@
             {{ site.title }}
         </a>
     </h1>
-    <button id="themeButton" class="pt-2.5 dark:text-white"></button>
+    <button id="themeButton" class="w-6 h-6 mt-2.5 dark:text-white"></button>
 
 </div>
 {% include "partials/nav.njk" %}
